--- a/biblio.bib
+++ b/biblio.bib
@@ -1,8 +1,4 @@
-@misc{scripts,
-  title = {{SCRIPTS} Euler contra lsode },
-  howpublished = {\url{https://www.fing.edu.uy/owncloud/index.php/s/BSRTwE3wmmjcmoq}},
-  note = {Accessed: 2018-9-22}
-}
+
 
 
 @book{Patrikalakis,
@@ -15,14 +11,54 @@ Publisher={Springer Berlin,Heidelberg, Berlin, Heidelberg}
 year = {2002},
 }
 
-@book{Notas_curso,
+@article{rubio&leon,
+Abstract = {In this paper, we proposes an algorithm to approximate the Geodesic distance between points p and q of sphere, through the numerical solution of initial value problem associated with the system of ordinary differential equations of the geodesics; for this an appropriate direction is obtained.},
+Author = {Franco, Rubio and Ronald, Le\'on},
+ISSN = {2411-1783},
+Journal = {Selecciones Matemáticas, Vol 3, Iss 2, Pp 49-59 (2016)},
+Keywords = {Intrinsec distance, geodesic distance, geodesics, sphere, initial value problem, approximation, Applied mathematics. Quantitative methods, T57-57.97, Mathematics, QA1-939},
+Number = {2},
+Pages = {49},
+Title = {APPROXIMATION OF THE DISTANCE IN THE SPHERE THROUGH OF THE NUMERICAL SOLUTION OF INITIAL VALUE PROBLEM ASSOCIATED TO GEODESICS.},
+URL = {http://proxy.timbo.org.uy:443/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=edsdoj&AN=edsdoj.ba98caf0f1804df6a179582a99eabd13&lang=es&site=eds-live},
+Year = {2016},
+}
+
+@book{notasMN,
 Author = {Instituto de Matem\'aticas y Estad\'istica "Rafael Laguardia"  - Facultad de Ingenier\'ia  - Universidad de la Rep\'ublica
 },
 Pages = {101 - 110},
 Title = {"Apuntes de te\'orico - M\'etodos num\'ericos" Cap\'itulo 6: Ecuaciones Diferenciales.}
 }
 
+@misc{scripts,
+  title = {{Scripts Euler vs LSODE} },
+  howpublished = {\url{https://www.fing.edu.uy/owncloud/index.php/s/BSRTwE3wmmjcmoq}},
+  note = {Accessed: 2018-9-22}
+}
+@misc{bib:lsode,
+  title = {{OCTAVE: Ordinary Differential Equations} },
+  howpublished = {\url{https://octave.org/doc/v4.4.1/Ordinary-Differential-Equations.html
+}},
+  note = {Accessed: 2018-9-22}
+}
 
+
+@book{bib:lsodeimp,
+Author = {Radhakrishnan, Krishnan and Hindmarsh, Alan C.},
+Publisher = {[Washington, DC] : [Springfield, Va.] : National Aeronautics and Space Administration, Office of Management, Scientific and Technical Information Program ; National Technical Information Service, distributor, 1993},
+Series = {NASA reference publication: 1327},
+Title = {Description and use of LSODE: the Livermore solver for ordinary differential equations},
+Pages = {7-39},
+URL = {http://proxy.timbo.org.uy:443/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=edsgpr&AN=edsgpr.000431535&lang=es&site=eds-live},
+Year = {1993}}
+@techreport{bib:vascos,
+    author = {Alvaro P\'́ampano Llarena},
+    institution = {Euskal Herriko Unibertsitatea - Zientzia eta Teknologia Fakultatea (Universidad del Pa\'is Vasco - Facultad de Ciencia y Tecnolog\'ias)},
+    pages={13-14},
+    title = {{Geod\'esicas en Variedades de Riemann}},
+    year = {2014}
+}
 
 @article{Recoba,
 author = {Recoba, Rodrigo and Robledo, Franco and Romero, Pablo and Viera, Omar},
